--- a/main.css
+++ b/main.css
@@ -63,8 +63,8 @@ button{
 @media (max-width: 700px){
     nav{
         width: 400px;
-        margin-top: 50px;
-        padding: 20px 5px;
+        margin: 50px auto 0;
+        padding: 20px 25px;
         border-bottom: 2px solid #c1bdba;
     }
     .container{
@@ -73,7 +73,7 @@ button{
         text-align: center;
         width: 400px;
         max-width: 100%;
-        margin-bottom: 50px;
+        margin: 0 auto 50px;
     }
     .col-2{
         color: #8a8b8c;
